<resources>
    <string name="app_name">WiFiManager</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bt_connect">Connect</string>
    <string name="homefragment_instruction">Please enter your username</string>
    <string name="save_as_reference">Save point as reference</string>
    <string name="reference_points">Reference points</string>
    <string name="trilateration">Trilateration</string>
    <string name="getWifiItems">Get WiFis</string>
    <string name="saveRef">Save reference</string>
    <string name="dialog_title">Select the floor and coordinates</string>
    <string name="message_item">Message</string>
    <string name="update">Update</string>
    <string name="floor_number">Floor number</string>
    <string name="x_coord">X coordiante</string>
    <string name="y_coord">Y coordiante</string>
    <string name="settings">Settings</string>
    <string name="username">Username</string>
    <string name="hint_connect">Username</string>
    <string name="appName">WiFiManager</string>
    <string name="listWifis">Available Wi-Fi networks </string>
    <string name="selectFloor">Floor selection: </string>
    <string name="selectMyColor">MyColor</string>
    <string name="selectOnlineUsersColor">User colors</string>
    <string name="selectReferencePointsColor">Reference points color</string>
    <string name="autoFloorSelection">Auto floor selection</string>
</resources>
